# python_gcp

./: Dockerfile  README.md  create_accident_table.py  e_crawler_accident.py  l_setpkfk_accident.py  l_tomysql_accident.py  l_tomysqlgcp_accident.py  load_to_mysql.py  main.py  pyproject.toml  t_dataclr_accident.py
note/: gcp.md  git.md  poetry.md
